--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
-<script src="jspm_packages/system.js"></script>
-<script src="config.js"></script>
-<script>
-System.import('lib/scene.js');
-</script>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Cannon Fire</title>
+        <script src="jspm_packages/system.js"></script>
+        <script src="config.js"></script>
+        <script type="text/javascript">
+            System.import('lib/scene.js');
+        </script>
+    </head>
+    <body>
+    </body>
+</html>
