--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Cannon Fire</title>
+        <link rel="stylesheet" type="text/css" href="lib/stats.css">
+
         <script src="jspm_packages/system.js"></script>
         <script src="config.js"></script>
         <script type="text/javascript">
